@@ -1,10 +1,10 @@
 package org.maplibre.mlt.converter.encodings;
 
 import com.google.common.primitives.Bytes;
+import jakarta.annotation.Nullable;
 import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
-import javax.annotation.Nullable;
 import org.apache.commons.lang3.tuple.Triple;
 import org.maplibre.mlt.converter.CollectionUtils;
 import org.maplibre.mlt.converter.Settings;
@@ -17,12 +17,14 @@ import org.maplibre.mlt.metadata.stream.StreamMetadata;
 import org.maplibre.mlt.metadata.tileset.MltTilesetMetadata;
 
 public class PropertyEncoder {
-  private static final String ID_COLUMN_NAME = "id";
+  public static final String ID_COLUMN_NAME = "id";
+  public static final String GEOMETRY_COLUMN_NAME = "geometry";
 
   public static byte[] encodePropertyColumns(
       List<MltTilesetMetadata.Column> propertyColumns,
       List<Feature> features,
       boolean useAdvancedEncodings,
+      boolean coercePropertyValues,
       List<ColumnMapping> columnMappings,
       @Nullable Map<String, Triple<byte[], byte[], String>> rawStreamData)
       throws IOException {
@@ -38,28 +40,28 @@ public class PropertyEncoder {
     var i = 0;
     for (var columnMetadata : propertyColumns) {
       if (columnMetadata.hasScalarType()) {
-        if (features.stream()
-            .noneMatch(f -> f.properties().containsKey(columnMetadata.getName()))) {
+        if (MltTypeMap.Tag0x01.hasStreamCount(columnMetadata)
+            && features.stream()
+                .noneMatch(f -> f.properties().containsKey(columnMetadata.getName()))) {
           /* Indicate a missing property column in the tile with a zero for the number of streams */
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {0}, false, false);
+          final var encodedFieldMetadata = EncodingUtils.encodeVarint(0, false);
           featureScopedPropertyColumns =
               CollectionUtils.concatByteArrays(featureScopedPropertyColumns, encodedFieldMetadata);
           continue;
         }
 
-        var encodedScalarPropertyColumn =
+        final var encodedScalarPropertyColumn =
             encodeScalarPropertyColumn(
                 columnMetadata,
                 features,
                 physicalLevelTechnique,
                 useAdvancedEncodings,
+                coercePropertyValues,
                 rawStreamData);
         featureScopedPropertyColumns =
             CollectionUtils.concatByteArrays(
                 featureScopedPropertyColumns, encodedScalarPropertyColumn);
-      } else if (columnMetadata.hasComplexType()
-          && columnMetadata.getComplexType().getPhysicalType()
-              == MltTilesetMetadata.ComplexType.STRUCT) {
+      } else if (MltTypeMap.Tag0x01.isStruct(columnMetadata)) {
         if (columnMappings.isEmpty()) {
           throw new IllegalArgumentException(
               "Column mappings are required for nested property column "
@@ -112,7 +114,7 @@ public class PropertyEncoder {
 
         if (sharedDictionary.stream().allMatch(List::isEmpty)) {
           /* Set number of streams to zero if no columns are present in this tile */
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {0}, false, false);
+          final var encodedFieldMetadata = EncodingUtils.encodeVarint(0, false);
           return CollectionUtils.concatByteArrays(
               featureScopedPropertyColumns, encodedFieldMetadata);
         }
@@ -125,10 +127,9 @@ public class PropertyEncoder {
                 rawStreamData,
                 columnMetadata.getName());
         // TODO: fix -> ony quick and dirty fix
-        var numStreams = nestedColumns.getLeft() == 0 ? 0 : 1;
+        final var numStreams = nestedColumns.getLeft() == 0 ? 0 : 1;
         /* Set number of streams to zero if no columns are present in this tile */
-        var encodedFieldMetadata =
-            EncodingUtils.encodeVarints(new long[] {numStreams}, false, false);
+        final var encodedFieldMetadata = EncodingUtils.encodeVarint(numStreams, false);
 
         // TODO: add present stream and present stream metadata for struct column in addition
         // to the FieldMetadata to be compliant with the specification
@@ -144,58 +145,100 @@ public class PropertyEncoder {
     return featureScopedPropertyColumns;
   }
 
+  private static Boolean getBooleanPropertyValue(
+      Feature feature, MltTilesetMetadata.Column columnMetadata) {
+    final var rawValue = feature.properties().get(columnMetadata.getName());
+    if (rawValue instanceof Boolean) {
+      return (Boolean) rawValue;
+    }
+    return null;
+  }
+
+  private static Integer getIntPropertyValue(
+      Feature feature, MltTilesetMetadata.Column columnMetadata) {
+    final var rawValue = feature.properties().get(columnMetadata.getName());
+    if (rawValue instanceof Integer) {
+      return (Integer) rawValue;
+    } else if (rawValue instanceof Long) {
+      final var v = (long) rawValue;
+      if ((int) v == v) {
+        return (int) v;
+      }
+    }
+    return null;
+  }
+
+  private static Long getLongPropertyValue(
+      Feature feature, MltTilesetMetadata.Column columnMetadata) {
+    final var rawValue = feature.properties().get(columnMetadata.getName());
+    if (rawValue instanceof Long) {
+      return (Long) rawValue;
+    } else if (rawValue instanceof Integer) {
+      return (long) (int) rawValue;
+    }
+    return null;
+  }
+
+  private static Float getFloatPropertyValue(
+      Feature feature, MltTilesetMetadata.Column columnMetadata) {
+    final var rawValue = feature.properties().get(columnMetadata.getName());
+    if (rawValue instanceof Float) {
+      return (Float) rawValue;
+    } else if (rawValue instanceof Double) {
+      return (float) (double) rawValue;
+    }
+    return null;
+  }
+
+  private static String getStringPropertyValue(
+      Feature feature, MltTilesetMetadata.Column columnMetadata, boolean coercePropertyValues) {
+    final var rawValue = feature.properties().get(columnMetadata.getName());
+    if (rawValue != null) {
+      if (rawValue instanceof String) {
+        return (String) rawValue;
+      }
+      if (coercePropertyValues) {
+        return rawValue.toString();
+      }
+    }
+    return null;
+  }
+
   public static byte[] encodeScalarPropertyColumn(
       MltTilesetMetadata.Column columnMetadata,
       List<Feature> features,
       PhysicalLevelTechnique physicalLevelTechnique,
       boolean useAdvancedEncodings,
+      boolean coercePropertyValues,
       @Nullable Map<String, Triple<byte[], byte[], String>> rawStreamData)
       throws IOException {
-    var scalarType = columnMetadata.getScalarType().getPhysicalType();
+    final var scalarType = columnMetadata.getScalarType().getPhysicalType();
     switch (scalarType) {
       case BOOLEAN:
         {
-          var booleanColumn =
-              encodeBooleanColumn(features, columnMetadata.getName(), rawStreamData);
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {2}, false, false);
-          return CollectionUtils.concatByteArrays(encodedFieldMetadata, booleanColumn);
-        }
-      case UINT_32:
-        {
-          var intColumn =
-              encodeInt32Column(
-                  features, columnMetadata.getName(), physicalLevelTechnique, false, rawStreamData);
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {2}, false, false);
-          return CollectionUtils.concatByteArrays(encodedFieldMetadata, intColumn);
+          // no stream count
+          return encodeBooleanColumn(features, columnMetadata, rawStreamData);
         }
       case INT_32:
+      case UINT_32:
         {
-          var intColumn =
-              encodeInt32Column(
-                  features, columnMetadata.getName(), physicalLevelTechnique, true, rawStreamData);
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {2}, false, false);
-          return CollectionUtils.concatByteArrays(encodedFieldMetadata, intColumn);
-        }
-      case UINT_64:
-        {
-          var intColumn =
-              encodeInt64Column(features, columnMetadata.getName(), false, rawStreamData);
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {2}, false, false);
-          return CollectionUtils.concatByteArrays(encodedFieldMetadata, intColumn);
+          final var signed = (scalarType == MltTilesetMetadata.ScalarType.INT_32);
+          // no stream count
+          return encodeInt32Column(
+              features, columnMetadata, physicalLevelTechnique, signed, rawStreamData);
         }
       case INT_64:
+      case UINT_64:
         {
-          var intColumn =
-              encodeInt64Column(features, columnMetadata.getName(), true, rawStreamData);
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {2}, false, false);
-          return CollectionUtils.concatByteArrays(encodedFieldMetadata, intColumn);
+          final var signed = (scalarType == MltTilesetMetadata.ScalarType.INT_64);
+          // no stream count
+          return encodeInt64Column(features, columnMetadata, signed, rawStreamData);
         }
       case FLOAT:
       case DOUBLE:
         {
-          var floatColumn = encodeFloatColumn(features, columnMetadata.getName(), rawStreamData);
-          var encodedFieldMetadata = EncodingUtils.encodeVarints(new long[] {2}, false, false);
-          return CollectionUtils.concatByteArrays(encodedFieldMetadata, floatColumn);
+          // no stream count
+          return encodeFloatColumn(features, columnMetadata, rawStreamData);
         }
       case STRING:
         {
@@ -207,22 +250,26 @@ public class PropertyEncoder {
            *   -> SharedDictionaryLength, SharedDictionary, present1, data1, present2, data2
            * -> N Columns FsstDictionary
            * */
-          var present =
+          final var rawStringValues =
               features.stream()
-                  .map(f -> f.properties().get(columnMetadata.getName()) != null)
-                  .collect(Collectors.toList());
-          var presentStream =
-              BooleanEncoder.encodeBooleanStream(
-                  present,
-                  PhysicalStreamType.PRESENT,
-                  rawStreamData,
-                  "prop_" + columnMetadata.getName() + "_present");
+                  .map(f -> getStringPropertyValue(f, columnMetadata, coercePropertyValues))
+                  .toList();
+          final var stringValues =
+              rawStringValues.stream().filter(Objects::nonNull).collect(Collectors.toList());
 
-          var stringValues =
-              features.stream()
-                  .map(f -> (String) f.properties().get(columnMetadata.getName()))
-                  .filter(Objects::nonNull)
-                  .collect(Collectors.toList());
+          final byte[] presentStream;
+          if (columnMetadata.getNullable()) {
+            final var presentValues = rawStringValues.stream().map(Objects::nonNull).toList();
+            presentStream =
+                BooleanEncoder.encodeBooleanStream(
+                    presentValues,
+                    PhysicalStreamType.PRESENT,
+                    rawStreamData,
+                    "prop_" + columnMetadata.getName() + "_present");
+          } else {
+            presentStream = new byte[0];
+          }
+
           var stringColumn =
               StringEncoder.encode(
                   stringValues,
@@ -232,8 +279,8 @@ public class PropertyEncoder {
                   "prop_" + columnMetadata.getName());
 
           /* Plus 1 for present stream */
-          var encodedFieldMetadata =
-              EncodingUtils.encodeVarints(new long[] {stringColumn.getLeft() + 1}, false, false);
+          final var streamCount = stringColumn.getLeft() + ((presentStream.length > 0) ? 1 : 0);
+          final var encodedFieldMetadata = EncodingUtils.encodeVarint(streamCount, false);
           return CollectionUtils.concatByteArrays(
               encodedFieldMetadata, presentStream, stringColumn.getRight());
         }
@@ -245,37 +292,44 @@ public class PropertyEncoder {
 
   private static byte[] encodeBooleanColumn(
       List<Feature> features,
-      String fieldName,
+      MltTilesetMetadata.Column metadata,
       @Nullable Map<String, Triple<byte[], byte[], String>> rawStreamData)
       throws IOException {
-    var presentStream = new BitSet(features.size());
-    var dataStream = new BitSet();
+    final var fieldName = metadata.getName();
+    final var presentStream = metadata.getNullable() ? new BitSet(features.size()) : null;
+    final var dataStream = new BitSet();
     var dataStreamIndex = 0;
     var presentStreamIndex = 0;
     for (var feature : features) {
-      var propertyValue = feature.properties().get(fieldName);
-      if (propertyValue != null) {
+      final var propertyValue = getBooleanPropertyValue(feature, metadata);
+      final var present = (propertyValue != null);
+      if (present) {
         dataStream.set(dataStreamIndex++, (boolean) propertyValue);
-        presentStream.set(presentStreamIndex++, true);
-      } else {
-        presentStream.set(presentStreamIndex++, false);
+      }
+      if (presentStream != null) {
+        presentStream.set(presentStreamIndex++, present);
       }
     }
 
-    var encodedPresentStream = EncodingUtils.encodeBooleanRle(presentStream, presentStreamIndex);
-    var encodedDataStream = EncodingUtils.encodeBooleanRle(dataStream, dataStreamIndex);
+    final var encodedPresentStream =
+        (presentStream != null)
+            ? EncodingUtils.encodeBooleanRle(presentStream, presentStreamIndex)
+            : new byte[0];
+    final var encodedDataStream = EncodingUtils.encodeBooleanRle(dataStream, dataStreamIndex);
 
-    var encodedPresentStreamMetadata =
-        new StreamMetadata(
-                PhysicalStreamType.PRESENT,
-                null,
-                LogicalLevelTechnique.RLE,
-                LogicalLevelTechnique.NONE,
-                PhysicalLevelTechnique.NONE,
-                presentStreamIndex,
-                encodedPresentStream.length)
-            .encode();
-    var encodedDataStreamMetadata =
+    final var encodedPresentStreamMetadata =
+        (presentStream != null)
+            ? new StreamMetadata(
+                    PhysicalStreamType.PRESENT,
+                    null,
+                    LogicalLevelTechnique.RLE,
+                    LogicalLevelTechnique.NONE,
+                    PhysicalLevelTechnique.NONE,
+                    presentStreamIndex,
+                    encodedPresentStream.length)
+                .encode()
+            : new byte[0];
+    final var encodedDataStreamMetadata =
         new StreamMetadata(
                 PhysicalStreamType.DATA,
                 null,
@@ -286,13 +340,15 @@ public class PropertyEncoder {
                 encodedDataStream.length)
             .encode();
 
-    if (rawStreamData != null && fieldName != null) {
-      GeometryEncoder.recordStream(
-          "prop_" + fieldName + "_present",
-          bitValues(presentStream),
-          encodedPresentStreamMetadata,
-          encodedPresentStream,
-          rawStreamData);
+    if (rawStreamData != null) {
+      if (presentStream != null) {
+        GeometryEncoder.recordStream(
+            "prop_" + fieldName + "_present",
+            bitValues(presentStream),
+            encodedPresentStreamMetadata,
+            encodedPresentStream,
+            rawStreamData);
+      }
       GeometryEncoder.recordStream(
           "prop_" + fieldName,
           bitValues(dataStream),
@@ -310,63 +366,71 @@ public class PropertyEncoder {
 
   private static byte[] encodeFloatColumn(
       List<Feature> features,
-      String fieldName,
+      MltTilesetMetadata.Column metadata,
       @Nullable Map<String, Triple<byte[], byte[], String>> rawStreamData)
       throws IOException {
-    var values = new ArrayList<Float>();
-    var present = new ArrayList<Boolean>(features.size());
+    final var fieldName = metadata.getName();
+    final var values = new ArrayList<Float>();
+    final var presentValues =
+        metadata.getNullable() ? new ArrayList<Boolean>(features.size()) : null;
     for (var feature : features) {
-      var propertyValue = feature.properties().get(fieldName);
-      if (propertyValue != null) {
-        switch (propertyValue.getClass().getSimpleName()) {
-          case "Double":
-            var doubleValue = (Double) propertyValue;
-            values.add(doubleValue.floatValue());
-            break;
-          default:
-            values.add((float) propertyValue);
-            break;
-        }
-        present.add(true);
-      } else {
-        present.add(false);
+      final var propertyValue = getFloatPropertyValue(feature, metadata);
+      final var present = (propertyValue != null);
+      if (present) {
+        values.add(propertyValue);
+      }
+      if (presentValues != null) {
+        presentValues.add(present);
       }
     }
 
-    var encodedPresentStream =
-        BooleanEncoder.encodeBooleanStream(
-            present, PhysicalStreamType.PRESENT, rawStreamData, "prop_" + fieldName + "_present");
-    var encodedDataStream =
+    final var encodedPresentStream =
+        (presentValues != null)
+            ? BooleanEncoder.encodeBooleanStream(
+                presentValues,
+                PhysicalStreamType.PRESENT,
+                rawStreamData,
+                "prop_" + fieldName + "_present")
+            : new byte[0];
+    final var encodedDataStream =
         FloatEncoder.encodeFloatStream(values, rawStreamData, "prop_" + fieldName);
     return Bytes.concat(encodedPresentStream, encodedDataStream);
   }
 
   private static byte[] encodeInt32Column(
       List<Feature> features,
-      String fieldName,
+      MltTilesetMetadata.Column metadata,
       PhysicalLevelTechnique physicalLevelTechnique,
       boolean isSigned,
       @Nullable Map<String, Triple<byte[], byte[], String>> rawStreamData)
       throws IOException {
-    var values = new ArrayList<Integer>();
-    var present = new ArrayList<Boolean>(features.size());
+    final var fieldName = metadata.getName();
+    final var values = new ArrayList<Integer>();
+    final var presentValues =
+        metadata.getNullable() ? new ArrayList<Boolean>(features.size()) : null;
     for (var feature : features) {
-      var propertyValue =
-          fieldName.equals(ID_COLUMN_NAME) ? feature.id() : feature.properties().get(fieldName);
-      if (propertyValue != null) {
-        // TODO: refactor -> handle long values for ids differently
-        var intValue =
-            propertyValue instanceof Long ? ((Long) propertyValue).intValue() : (int) propertyValue;
-        values.add(intValue);
-        present.add(true);
-      } else {
-        present.add(false);
+      // TODO: refactor -> handle long values for ids differently
+      final var propertyValue =
+          fieldName.equals(ID_COLUMN_NAME)
+              ? Integer.valueOf((int) feature.id())
+              : getIntPropertyValue(feature, metadata);
+      final var present = (propertyValue != null);
+      if (present) {
+        values.add(propertyValue);
+      }
+      if (presentValues != null) {
+        presentValues.add(present);
       }
     }
 
     var encodedPresentStream =
-        BooleanEncoder.encodeBooleanStream(
-            present, PhysicalStreamType.PRESENT, rawStreamData, "prop_" + fieldName + "_present");
+        (presentValues != null)
+            ? BooleanEncoder.encodeBooleanStream(
+                presentValues,
+                PhysicalStreamType.PRESENT,
+                rawStreamData,
+                "prop_" + fieldName + "_present")
+            : new byte[0];
     var encodedDataStream =
         IntegerEncoder.encodeIntStream(
             values,
@@ -382,26 +446,36 @@ public class PropertyEncoder {
 
   private static byte[] encodeInt64Column(
       List<Feature> features,
-      String fieldName,
+      MltTilesetMetadata.Column metadata,
       boolean isSigned,
       @Nullable Map<String, Triple<byte[], byte[], String>> rawStreamData)
       throws IOException {
-    var values = new ArrayList<Long>();
-    var present = new ArrayList<Boolean>(features.size());
+    final var fieldName = metadata.getName();
+    final var values = new ArrayList<Long>();
+    final var presentValues =
+        metadata.getNullable() ? new ArrayList<Boolean>(features.size()) : null;
     for (var feature : features) {
-      var propertyValue =
-          fieldName.equals(ID_COLUMN_NAME) ? feature.id() : feature.properties().get(fieldName);
-      if (propertyValue != null) {
+      final var propertyValue =
+          fieldName.equals(ID_COLUMN_NAME)
+              ? Long.valueOf(feature.id())
+              : getLongPropertyValue(feature, metadata);
+      final var present = (propertyValue != null);
+      if (present) {
         values.add((long) propertyValue);
-        present.add(true);
-      } else {
-        present.add(false);
+      }
+      if (presentValues != null) {
+        presentValues.add(present);
       }
     }
 
     var encodedPresentStream =
-        BooleanEncoder.encodeBooleanStream(
-            present, PhysicalStreamType.PRESENT, rawStreamData, "prop_" + fieldName + "_present");
+        (presentValues != null)
+            ? BooleanEncoder.encodeBooleanStream(
+                presentValues,
+                PhysicalStreamType.PRESENT,
+                rawStreamData,
+                "prop_" + fieldName + "_present")
+            : new byte[0];
     var encodedDataStream =
         IntegerEncoder.encodeLongStream(
             values, isSigned, PhysicalStreamType.DATA, null, rawStreamData, "prop_" + fieldName);
